// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultNavbar expands with columns 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1rujksk-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-1yv1dw1"
    >
      <div
        class="MuiBox-root css-1dyncq9"
      >
        <a
          href="/"
        >
          <span
            class="MuiTypography-root MuiTypography-button css-lan4mq-MuiTypography-root"
          >
            Daniel Hong Portfolio
          </span>
        </a>
        <div
          class="MuiBox-root css-k0f0w7"
        >
          <div
            class="MuiBox-root css-111f5ru"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
                data-testid="DonutSmallIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 9.16V2c-5 .5-9 4.79-9 10s4 9.5 9 10v-7.16c-1-.41-2-1.52-2-2.84s1-2.43 2-2.84zM14.86 11H22c-.48-4.75-4-8.53-9-9v7.16c1 .3 1.52.98 1.86 1.84zM13 14.84V22c5-.47 8.52-4.25 9-9h-7.14c-.34.86-.86 1.54-1.86 1.84z"
                />
              </svg>
            </p>
            <span
              class="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
            >
              traveling
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
              >
                keyboard_arrow_down
              </span>
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root css-13l63k6"
        />
        <div
          class="MuiBox-root css-1kcb7bo"
        >
          <span
            aria-hidden="true"
            class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeDefault css-75zff6-MuiIcon-root"
          >
            menu
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-1kfwhtq"
      />
    </div>
  </div>
</div>
`;

exports[`DefaultNavbar expands with columns 2`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1rujksk-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-1yv1dw1"
    >
      <div
        class="MuiBox-root css-1dyncq9"
      >
        <a
          href="/"
        >
          <span
            class="MuiTypography-root MuiTypography-button css-lan4mq-MuiTypography-root"
          >
            Daniel Hong Portfolio
          </span>
        </a>
        <div
          class="MuiBox-root css-k0f0w7"
        >
          <div
            class="MuiBox-root css-111f5ru"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
                data-testid="DonutSmallIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 9.16V2c-5 .5-9 4.79-9 10s4 9.5 9 10v-7.16c-1-.41-2-1.52-2-2.84s1-2.43 2-2.84zM14.86 11H22c-.48-4.75-4-8.53-9-9v7.16c1 .3 1.52.98 1.86 1.84zM13 14.84V22c5-.47 8.52-4.25 9-9h-7.14c-.34.86-.86 1.54-1.86 1.84z"
                />
              </svg>
            </p>
            <span
              class="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
            >
              traveling
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
              >
                keyboard_arrow_down
              </span>
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root css-13l63k6"
        />
        <div
          class="MuiBox-root css-1kcb7bo"
        >
          <span
            aria-hidden="true"
            class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeDefault css-75zff6-MuiIcon-root"
          >
            menu
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-1kfwhtq"
      />
    </div>
  </div>
</div>
`;

exports[`DefaultNavbar expands without columns 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1rujksk-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-1yv1dw1"
    >
      <div
        class="MuiBox-root css-1dyncq9"
      >
        <a
          href="/"
        >
          <span
            class="MuiTypography-root MuiTypography-button css-lan4mq-MuiTypography-root"
          >
            Daniel Hong Portfolio
          </span>
        </a>
        <div
          class="MuiBox-root css-k0f0w7"
        >
          <div
            class="MuiBox-root css-111f5ru"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
                data-testid="DonutSmallIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 9.16V2c-5 .5-9 4.79-9 10s4 9.5 9 10v-7.16c-1-.41-2-1.52-2-2.84s1-2.43 2-2.84zM14.86 11H22c-.48-4.75-4-8.53-9-9v7.16c1 .3 1.52.98 1.86 1.84zM13 14.84V22c5-.47 8.52-4.25 9-9h-7.14c-.34.86-.86 1.54-1.86 1.84z"
                />
              </svg>
            </p>
            <span
              class="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
            >
              flight
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
              >
                keyboard_arrow_down
              </span>
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root css-13l63k6"
        />
        <div
          class="MuiBox-root css-1kcb7bo"
        >
          <span
            aria-hidden="true"
            class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeDefault css-75zff6-MuiIcon-root"
          >
            menu
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-1kfwhtq"
      />
    </div>
  </div>
</div>
`;

exports[`DefaultNavbar expands without columns 2`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1rujksk-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-1yv1dw1"
    >
      <div
        class="MuiBox-root css-1dyncq9"
      >
        <a
          href="/"
        >
          <span
            class="MuiTypography-root MuiTypography-button css-lan4mq-MuiTypography-root"
          >
            Daniel Hong Portfolio
          </span>
        </a>
        <div
          class="MuiBox-root css-k0f0w7"
        >
          <div
            class="MuiBox-root css-111f5ru"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
                data-testid="DonutSmallIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 9.16V2c-5 .5-9 4.79-9 10s4 9.5 9 10v-7.16c-1-.41-2-1.52-2-2.84s1-2.43 2-2.84zM14.86 11H22c-.48-4.75-4-8.53-9-9v7.16c1 .3 1.52.98 1.86 1.84zM13 14.84V22c5-.47 8.52-4.25 9-9h-7.14c-.34.86-.86 1.54-1.86 1.84z"
                />
              </svg>
            </p>
            <span
              class="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
            >
              flight
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
              >
                keyboard_arrow_down
              </span>
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root css-13l63k6"
        />
        <div
          class="MuiBox-root css-1kcb7bo"
        >
          <span
            aria-hidden="true"
            class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeDefault css-75zff6-MuiIcon-root"
          >
            menu
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-1kfwhtq"
      />
    </div>
  </div>
</div>
`;

exports[`DefaultNavbar renders with route 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1rujksk-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-1yv1dw1"
    >
      <div
        class="MuiBox-root css-1dyncq9"
      >
        <a
          href="/"
        >
          <span
            class="MuiTypography-root MuiTypography-button css-lan4mq-MuiTypography-root"
          >
            Daniel Hong Portfolio
          </span>
        </a>
        <div
          class="MuiBox-root css-k0f0w7"
        >
          <a
            href="/default"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
                data-testid="GitHubIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 1.27a11 11 0 00-3.48 21.46c.55.09.73-.28.73-.55v-1.84c-3.03.64-3.67-1.46-3.67-1.46-.55-1.29-1.28-1.65-1.28-1.65-.92-.65.1-.65.1-.65 1.1 0 1.73 1.1 1.73 1.1.92 1.65 2.57 1.2 3.21.92a2 2 0 01.64-1.47c-2.47-.27-5.04-1.19-5.04-5.5 0-1.1.46-2.1 1.2-2.84a3.76 3.76 0 010-2.93s.91-.28 3.11 1.1c1.8-.49 3.7-.49 5.5 0 2.1-1.38 3.02-1.1 3.02-1.1a3.76 3.76 0 010 2.93c.83.74 1.2 1.74 1.2 2.94 0 4.21-2.57 5.13-5.04 5.4.45.37.82.92.82 2.02v3.03c0 .27.1.64.73.55A11 11 0 0012 1.27"
                />
              </svg>
            </p>
            <span
              class="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
            >
              Github
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
              />
            </p>
          </a>
          <div
            class="MuiBox-root css-111f5ru"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
                data-testid="DonutSmallIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 9.16V2c-5 .5-9 4.79-9 10s4 9.5 9 10v-7.16c-1-.41-2-1.52-2-2.84s1-2.43 2-2.84zM14.86 11H22c-.48-4.75-4-8.53-9-9v7.16c1 .3 1.52.98 1.86 1.84zM13 14.84V22c5-.47 8.52-4.25 9-9h-7.14c-.34.86-.86 1.54-1.86 1.84z"
                />
              </svg>
            </p>
            <span
              class="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
            >
              doughnut
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
              >
                keyboard_arrow_down
              </span>
            </p>
          </div>
          <a
            href="/facebook"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
                data-testid="FacebookIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2m13 2h-2.5A3.5 3.5 0 0 0 12 8.5V11h-2v3h2v7h3v-7h3v-3h-3V9a1 1 0 0 1 1-1h2V5z"
                />
              </svg>
            </p>
            <span
              class="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
            >
              Facebook
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
              />
            </p>
          </a>
          <a
            href="/twitter"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
                data-testid="TwitterIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22.46 6c-.77.35-1.6.58-2.46.69.88-.53 1.56-1.37 1.88-2.38-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29 0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15 0 1.49.75 2.81 1.91 3.56-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07 4.28 4.28 0 0 0 4 2.98 8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21 16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56.84-.6 1.56-1.36 2.14-2.23z"
                />
              </svg>
            </p>
            <span
              class="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
            >
              Twitter
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
              />
            </p>
          </a>
        </div>
        <div
          class="MuiBox-root css-13l63k6"
        />
        <div
          class="MuiBox-root css-1kcb7bo"
        >
          <span
            aria-hidden="true"
            class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeDefault css-75zff6-MuiIcon-root"
          >
            menu
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-1kfwhtq"
      />
    </div>
  </div>
</div>
`;

exports[`DefaultNavbar renders without route 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1rujksk-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-1yv1dw1"
    >
      <div
        class="MuiBox-root css-1dyncq9"
      >
        <a
          href="/"
        >
          <span
            class="MuiTypography-root MuiTypography-button css-lan4mq-MuiTypography-root"
          >
            Daniel Hong Portfolio
          </span>
        </a>
        <div
          class="MuiBox-root css-k0f0w7"
        >
          <a
            href="/default"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
                data-testid="GitHubIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 1.27a11 11 0 00-3.48 21.46c.55.09.73-.28.73-.55v-1.84c-3.03.64-3.67-1.46-3.67-1.46-.55-1.29-1.28-1.65-1.28-1.65-.92-.65.1-.65.1-.65 1.1 0 1.73 1.1 1.73 1.1.92 1.65 2.57 1.2 3.21.92a2 2 0 01.64-1.47c-2.47-.27-5.04-1.19-5.04-5.5 0-1.1.46-2.1 1.2-2.84a3.76 3.76 0 010-2.93s.91-.28 3.11 1.1c1.8-.49 3.7-.49 5.5 0 2.1-1.38 3.02-1.1 3.02-1.1a3.76 3.76 0 010 2.93c.83.74 1.2 1.74 1.2 2.94 0 4.21-2.57 5.13-5.04 5.4.45.37.82.92.82 2.02v3.03c0 .27.1.64.73.55A11 11 0 0012 1.27"
                />
              </svg>
            </p>
            <span
              class="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
            >
              Github
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
              />
            </p>
          </a>
          <div
            class="MuiBox-root css-111f5ru"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
                data-testid="DonutSmallIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 9.16V2c-5 .5-9 4.79-9 10s4 9.5 9 10v-7.16c-1-.41-2-1.52-2-2.84s1-2.43 2-2.84zM14.86 11H22c-.48-4.75-4-8.53-9-9v7.16c1 .3 1.52.98 1.86 1.84zM13 14.84V22c5-.47 8.52-4.25 9-9h-7.14c-.34.86-.86 1.54-1.86 1.84z"
                />
              </svg>
            </p>
            <span
              class="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
            >
              doughnut
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
              >
                keyboard_arrow_down
              </span>
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root css-13l63k6"
        />
        <div
          class="MuiBox-root css-1kcb7bo"
        >
          <span
            aria-hidden="true"
            class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeDefault css-75zff6-MuiIcon-root"
          >
            menu
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-1kfwhtq"
      />
    </div>
  </div>
</div>
`;

exports[`DefaultNavbar should resize 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1rujksk-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-1yv1dw1"
    >
      <div
        class="MuiBox-root css-1dyncq9"
      >
        <a
          href="/"
        >
          <span
            class="MuiTypography-root MuiTypography-button css-lan4mq-MuiTypography-root"
          >
            Daniel Hong Portfolio
          </span>
        </a>
        <div
          class="MuiBox-root css-k0f0w7"
        >
          <a
            href="/default"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
                data-testid="GitHubIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 1.27a11 11 0 00-3.48 21.46c.55.09.73-.28.73-.55v-1.84c-3.03.64-3.67-1.46-3.67-1.46-.55-1.29-1.28-1.65-1.28-1.65-.92-.65.1-.65.1-.65 1.1 0 1.73 1.1 1.73 1.1.92 1.65 2.57 1.2 3.21.92a2 2 0 01.64-1.47c-2.47-.27-5.04-1.19-5.04-5.5 0-1.1.46-2.1 1.2-2.84a3.76 3.76 0 010-2.93s.91-.28 3.11 1.1c1.8-.49 3.7-.49 5.5 0 2.1-1.38 3.02-1.1 3.02-1.1a3.76 3.76 0 010 2.93c.83.74 1.2 1.74 1.2 2.94 0 4.21-2.57 5.13-5.04 5.4.45.37.82.92.82 2.02v3.03c0 .27.1.64.73.55A11 11 0 0012 1.27"
                />
              </svg>
            </p>
            <span
              class="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
            >
              Github
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
              />
            </p>
          </a>
          <div
            class="MuiBox-root css-111f5ru"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
                data-testid="DonutSmallIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 9.16V2c-5 .5-9 4.79-9 10s4 9.5 9 10v-7.16c-1-.41-2-1.52-2-2.84s1-2.43 2-2.84zM14.86 11H22c-.48-4.75-4-8.53-9-9v7.16c1 .3 1.52.98 1.86 1.84zM13 14.84V22c5-.47 8.52-4.25 9-9h-7.14c-.34.86-.86 1.54-1.86 1.84z"
                />
              </svg>
            </p>
            <span
              class="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
            >
              doughnut
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
            >
              <span
                aria-hidden="true"
                class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
              >
                keyboard_arrow_down
              </span>
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root css-13l63k6"
        />
        <div
          class="MuiBox-root css-1kcb7bo"
        >
          <span
            aria-hidden="true"
            class="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeDefault css-75zff6-MuiIcon-root"
          >
            menu
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-1kfwhtq"
      />
    </div>
  </div>
</div>
`;
